public abstract class NotificationFactory {
    public abstract Notification createNotification();
}